Fixed social media icon spacing

--- a/css/main.css
+++ b/css/main.css
@@ -377,41 +377,42 @@
      About Page
      ========================================================================== */
   
-  .mission {
-    background-color: #527158;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-  
-  .map figure {
-    width: 100%;
-    height: 0; 
-    padding-bottom: 125%; 
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .map iframe {
-    width: 100%;
-    height: 100%;
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-  }
-  
-  .contact-section {
-    background-color: #2a423a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-  
-  .contact-content p {
-    margin: 0;
-  }
+     .mission {
+      background-color: #527158;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+      margin-bottom: 20px;
+    }
+    
+    .map figure {
+      width: 100%;
+      height: 0; 
+      padding-bottom: 125%; 
+      overflow: hidden;
+      position: relative;
+    }
+    
+    .map iframe {
+      width: 100%;
+      height: 100%;
+      position: absolute; 
+      top: 0; 
+      left: 0; 
+    }
+    
+    .contact-section {
+      background-color: #2a423a;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+    }
+    
+    .contact-content p {
+      margin: 0;
+    }
   
   /* ==========================================================================
      FAQ Page
@@ -747,6 +748,9 @@
   
     .content-wrapper {
       max-width: 960px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
     }
   
     h2 {
@@ -805,6 +809,10 @@
   
     footer h4 {
       font-size: 1.875em;
+    }
+
+    footer .contact{
+      padding: 0 400px 0 0;
     }
   
     /* ==========================================================================
